# Minicrypt-Clique

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  catalog.py  server.py
crypto_core/common/: __init__.py  bitops.py  exceptions.py  interfaces.py  randomness.py  trace.py
crypto_core/foundation/: __init__.py  aes_foundation.py  base.py  dlp_foundation.py
crypto_core/hashing/: __init__.py  birthday.py  dlp_hash.py  hmac.py  merkle_damgard.py
crypto_core/minicrypt/: __init__.py  cca_enc.py  cpa_enc.py  custom_owf.py  mac.py  modes.py  owf.py  prf_ggm.py  prg.py  prp_feistel.py
crypto_core/mpc/: __init__.py  circuit.py  ot.py  secure_gates.py
crypto_core/number_theory/: __init__.py  crt.py  integer_root.py  miller_rabin.py  modular.py  prime_gen.py
crypto_core/pubkey/: __init__.py  cca_pkc.py  diffie_hellman.py  elgamal.py  pkc_interface.py  rsa.py  rsa_attacks.py  signatures.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Demos.jsx  styles.css
routing/: __init__.py  clique_graph.py  reducer.py
tests/: test_layering.py  test_no_libs.py
tests/api/: test_api.py
tests/common/: test_common.py
tests/foundation/: test_foundation.py
tests/frontend/: test_frontend_source.py
tests/hashing/: test_hashing.py
tests/integration/: test_full_chain.py
tests/minicrypt/: test_minicrypt.py
tests/mpc/: test_mpc.py
tests/number_theory/: test_number_theory.py
tests/pubkey/: test_pubkey.py
tests/routing/: test_routing.py
