[project]
name = "pois_crypto"
version = "0.1.0"
description = "CS8.401 Principles of Information Security - PA#1-#20"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "flask-cors>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
